--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
+  height: 5rem;
+  background-color: #EEA465;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-flow: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.header> h2{
+  font-size: 2.6rem;
+  font-weight: 800;
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.input-wrapper{
+  /* background-color: black; */
+  height: 60vh;
+  display: flex;
+  flex-direction: column nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  display: none;
+}
+
+label{
+  color: #777777;
+  display: block;
+  height: fit-content;
+  width: fit-content;
+  border: solid;
+  border-radius: 8px;
+  border-width: 2px;
+  cursor: pointer;
+}
+
+label:hover{
+  opacity: 50%;
+  transition: opacity 0.5s linear;
 }
