--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,95 @@
+:root {
+  --primary-color: #00B4FF;
+}
+
 body{
   margin: 0;
   padding: 0;
 }
 
 .header{
+  position: fixed;
   height: 5rem;
-  background-color: #EEA465;
+  width: 100vw;
+  /* background-color: #EEA465; */
+  background-color: rgba(255, 255, 255, 0.8);
   display: flex;
   flex-flow: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  z-index: 100;
+  /* box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.71); */
+  backdrop-filter: blur(6px);
+  box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.57);
+  -webkit-box-shadow: 0px 2px 10px 3px rgba(0,0,0,0.57);
+  -moz-box-shadow: 0px 2px 10px 3px rgba(0,0,0,0.57);
 }
 .header> h2{
   font-size: 2.6rem;
   font-weight: 800;
+  padding-left: 6rem;
   font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+  color: var(--primary-color);
+}
+.header> .functions{
+  display: inherit;
+  cursor: pointer;
+  padding-right: 6rem;
+}
+.header>.functions> h3{
+  padding: 0 1rem;
+  text-decoration: line-through;
 }
 
-.input-wrapper{
-  /* background-color: black; */
-  height: 60vh;
+.upload-wrapper{
+  height: fit-content;
+  padding-top: 5rem;
+  margin: 0 3rem;
+  height: 80vh;
+  /* height: 200vh; */
+  max-width: 100vw;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.welcome-text{
+  width: 50%;
+  margin-left: 3rem;
+}
+.welcome-text>h1{
+  font-size: 3.7rem;
+  line-height: 110%;
+  text-align: left;
+}
+.upload-card{
+  width: 20rem;
+  height: 20rem;
+  border-radius: 18px;
+  margin-right: 3rem;
   display: flex;
   flex-direction: column nowrap;
   justify-content: center;
   align-items: center;
+  flex-flow: column nowrap;
+  background-color: white;
+  cursor: pointer;
+  /* background-color: green; */
+  box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.57);
+  transition: transform 0.5s ease-out;
+}
+
+.upload-card:hover{
+  transform: scale(1.05);
+  transition: transform 0.5 ease-in;
 }
 
 input{
   display: none;
 }
 
-label{
+/* .upload-icon .make-typo-on-purpose{
   color: #777777;
   display: block;
   height: fit-content;
@@ -38,10 +97,43 @@ label{
   border: solid;
   border-radius: 8px;
   border-width: 2px;
+  margin-bottom: 100px;
   cursor: pointer;
+} */
+/* this gives the upload icon a curved rectangle border */
+/* it looks great stand-alone, but not with a lot of elments surrounding it */
+
+.upload-icon{
+  margin-top: 30px;
+  margin-bottom: 20px;
+  color: var(--primary-color);
 }
 
-label:hover{
+.upload-icon:hover{
   opacity: 50%;
   transition: opacity 0.5s linear;
+}
+
+.upload-icon-button{
+  height: 50px;
+  width: 200px;
+  border: none;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--primary-color);
+  transition: background-color 0.5s ease-out;
+}
+.upload-icon-button:hover{
+  background-color: #858585;
+  transition: background-color 0.5s ease-in;
+}
+.upload-icon-button> p{
+  letter-spacing: 0.5px;
+  word-spacing: 1px;
+  font-size: 1.4rem;
+  text-align: center;
+  color: white;
 }
